src/passes/snapshots/lumina2__passes__cst_gen__test__expression__binary_bitwise_or.snap
---
source: src/passes/cst_gen.rs
expression: a | 2
---
Binary {
    lhs: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    operation: BinaryOr(
        Bar,
    ),
    rhs: Literal(
        Integer(
            IntegerLiteral(
                IntegerLiteral(
                    2,
                ),
            ),
        ),
    ),
}
