src/passes/snapshots/lumina2__passes__cst_gen__test__expression__binary_variable.snap
---
source: src/passes/cst_gen.rs
expression: a + b
---
Binary {
    lhs: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    operation: Plus(
        Plus,
    ),
    rhs: Variable(
        Variable {
            variable: Ident(
                "b",
            ),
        },
    ),
}
