src/passes/snapshots/lumina2__passes__cst_gen__test__expression__call_multiple_arguments.snap
---
source: src/passes/cst_gen.rs
expression: "a(1, 2, 3)"
---
Call {
    callee: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    tok_l_parenthesis: LParenthesis,
    arguments: PunctuatedList {
        items: [
            Literal(
                Integer(
                    IntegerLiteral(
                        IntegerLiteral(
                            1,
                        ),
                    ),
                ),
            ),
            Literal(
                Integer(
                    IntegerLiteral(
                        IntegerLiteral(
                            2,
                        ),
                    ),
                ),
            ),
            Literal(
                Integer(
                    IntegerLiteral(
                        IntegerLiteral(
                            3,
                        ),
                    ),
                ),
            ),
        ],
        punctuation: [
            Comma,
            Comma,
        ],
    },
    tok_r_parenthesis: RParenthesis,
}
