src/passes/snapshots/lumina2__passes__cst_gen__test__expression__call_no_arguments.snap
---
source: src/passes/cst_gen.rs
expression: a()
---
Call {
    callee: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    tok_l_parenthesis: LParenthesis,
    arguments: PunctuatedList {
        items: [],
        punctuation: [],
    },
    tok_r_parenthesis: RParenthesis,
}
