src/passes/snapshots/lumina2__passes__cst_gen__test__expression__call_single_argument.snap
---
source: src/passes/cst_gen.rs
expression: a(1)
---
Call {
    callee: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    tok_l_parenthesis: LParenthesis,
    arguments: PunctuatedList {
        items: [
            Literal(
                Integer(
                    IntegerLiteral(
                        IntegerLiteral(
                            1,
                        ),
                    ),
                ),
            ),
        ],
        punctuation: [],
    },
    tok_r_parenthesis: RParenthesis,
}
